<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_show_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/app_bar_collapsing"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/textViewCreditsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/credits_body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="20dp"
                android:text="@string/credits_body1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_body2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/credits_body3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_body3"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/credits_body4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="15dp"
                android:text="@string/credits_body4"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_body5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_body5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/credits_body6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="15dp"
                android:text="@string/credits_body6"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_body7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_body7"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/credits_body8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="20dp"
                android:text="@string/credits_body8"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_texts_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_texts_0"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/credits_texts_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:lineSpacingExtra="4dp"
                android:text="@string/credits_texts_1"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_texts_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:lineSpacingExtra="4dp"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_texts_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_texts_3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/credits_texts_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_texts_4"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_texts_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_texts_5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/credits_texts_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_texts_6"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/credits_texts_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/credits_texts_7"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>